--- a/BA_argo_doc/auswertung.tex
+++ b/BA_argo_doc/auswertung.tex
@@ -39,5 +39,5 @@ Es hat sich gezeigt, dass es schwierig ist, zwischen den Messpunkten auf der Kar
 "`Der echte Zug des Wissens ist nichts Statisches, das man anhalten und in Teile zerlegen kann. Er ist immer in Fahrt. Auf einem Gleis namens Qualität. Und die Lok und die 120 Güterwagen fahren nie woanders hin, als wo das Gleis der Qualität sie hinführt."'
 \\
 \hrulefill \vspace{0.3cm}
-\textbf{Robert M. Pirsing} -- \textit{Zen und die Kunst ein Motorrad zu warten}
+\hfill\textbf{Robert M. Pirsing} -- \textit{Zen und die Kunst ein Motorrad zu warten}
 \vspace*{\fill}
