--- a/BA_argo_doc/bib.bib
+++ b/BA_argo_doc/bib.bib
@@ -170,7 +170,7 @@
 	title = {Opening the Flask},
 	year = {2011},
 	howpublished = {\url{http://mitsuhiko.pocoo.org/flask-pycon-2011.pdf}},
-	urldate = {2018-01-13}
+	urldate = {2018-01-13},
 	note = {(Aufgerufen am 13.01.2017)}
 }
 
