--- a/BA_argo_doc/testphase.tex
+++ b/BA_argo_doc/testphase.tex
@@ -90,7 +90,7 @@ Wie in Abbildung \ref{fig:ftest004} zu erkennen ist, wird der zwischen zwei Mess
  \label{fig:ftest00fail}
 \end{wrapfigure}
 
-In Abbildung \ref{fig:ftest00fail} ist ersichtlich, dass fehlerhafte Daten durch eine Warnung hervorgehoben werden. Diese informiert die Benutzenden, dass die Daten, die gerade angezeigt werden, zum Teil die Wertebereiche überschritten haben. Die Achsen der Funktionsplots werden auf die Wertebereiche beschränkt und Plots von mit \texttt{nan} kodierten Messwerten nicht dargestellt.
+In Abbildung \ref{fig:ftest00fail} ist ersichtlich, dass fehlerhafte Daten durch eine Warnung hervorgehoben werden. Diese informiert die Benutzenden, dass die Daten, die gerade angezeigt werden, zum Teil die Wertebereiche überschritten haben. Die Achsen der Funktionsplots werden auf die Wertebereiche beschränkt und Plots von mit \texttt{\gls{nan}} kodierten Messwerten nicht dargestellt.
 \newline
 \newline
 
@@ -119,7 +119,7 @@ Datafolder: /root/aoml/
 Process finished.
 This took  7381 seconds.
 We had a downtime of 11 seconds.
-So long and thanks for all the fish. 
+So long and thanks for all the fish.
 
     EOS
 \end{python}
@@ -184,7 +184,7 @@ Im Folgenden findet sich eine detaillierte Auswertung der hier erhobenen Daten:
     Diese Frage ermittelt ob genügend Hilfestellung zur Verfügung gestellt wurde.  Die am häufigsten gegebene Antworten liegen bei 1 und 3 (4 von 12 Personen).  Der Median liegt bei 2.5, das arithmetische Mittel liegt bei $2.33$. Die Box umfasst Antworten 1 bis 3, der Whisker schließt Antwort 4 mit ein.
 
 \paragraph{\texttt{Statement 5:} "`Ich finde, dass die Funktionen (Karte, Steuerung, Anzeige von Daten) gut integriert sind."'}
-    Diese Frage ermittelt die Integration der Steuerungselemente. 
+    Diese Frage ermittelt die Integration der Steuerungselemente.
     Die am häufigsten gegebene Antwort liegt bei 4 (6 von 12 Personen). Der Median liegt bei 4, das arithmetische Mittel bei $4.33$. Die Box umfasst  die Antworten 4 und 5. Der Whisker schließt Antwort 3 mit ein.
 
 \paragraph{\texttt{Statement 6:} "`Ich finde, dass es in ArgoData zu viele Inkonsistenzen gibt."'}
