--- a/BA_argo_doc/BA_ArgoFloats_main.tex
+++ b/BA_argo_doc/BA_ArgoFloats_main.tex
@@ -11,6 +11,7 @@
 % ====================\\|//====================
 %                     `---`
 \begin{document}
+\glsresetall
 \pagenumbering{roman}
 \pagestyle{plain}
 %\setcounter{page}{-1}
