--- a/BA_argo_doc/preamble.tex
+++ b/BA_argo_doc/preamble.tex
@@ -231,78 +231,13 @@ breaklinks=true] {hyperref}
 \renewcaptionname{ngerman}{\tablename}{Tabelle}
 \setkomafont{caption}{\footnotesize\itshape}
 \setkomafont{captionlabel}{\usekomafont{caption}}
+\usepackage[bitstream-charter]{mathdesign}
 
 
 \usepackage{booktabs}
 
-
-\usepackage[xindy,style=super,acronym, nonumberlist]{glossaries}
-\usepackage{glossaries-extra}
+\usepackage[acronym,style=altlist,automake]{glossaries}
 \addto\captionsngerman{\renewcommand*\acronymname{Abkürzungsverzeichnis}}
-
-\makenoidxglossaries
-
-\newacronym{JCOMM}{JCOMM}{"`Joint Technical Commission for Oceanography and Marine Meteorology"'}
-
-\newacronym{GDAC}{GDAC}{"`Data Selection and Visualization Tool"'}
-
-\newacronym{GOOS}{GOOS}{Global Ocean Observing
-System}
-
-\newacronym{DOI}{DOI}{digital object identifier}
-
-\newacronym{CDF}{CDF}{Common Data Format}
-\newacronym{netCDF}{netCDF}{Network Common Data Format}
-
-\newacronym{DBMS}{DBMS}{Datenbank-Management-System}
-
-\newacronym{ORM}{ORM}{Objektrelationaler Mapper}
-
-
-
-
-\newglossaryentry{Controller}{%
-    name={Controller},
-    description={Element zur Programmsteuerung der Webanwendung}
-}
-
-\newglossaryentry{HTTP}{%
-    name={HTTP},
-    description={Hypertext Transfer Protocol. Weit verbreitetes Protokoll um beispielsweise das WWW in den Webbrowser zu laden}
-}
-
-\newglossaryentry{FTP}{%
-    name={FTP},
-    description={File Transfer Protocol. Protokoll zur Übermittlung von Daten}
-}
-
-\newglossaryentry{API}{%
-    name={API},
-    description={Application-Programming-Interface. Programmschnittstelle, die Daten in maschinenlesbarer Form darstellt}
-}
-
-\newglossaryentry{HTML}{%
-    name={HTML},
-    description={Hypertext Markup Language. Beschreibungssprache die häufig für die Inhaltsbeschreibung von Webseiten verwendet wird}
-}
-
-\newglossaryentry{TESAC}{%
-  name={TESAC},
-  description={Wissenschaftliches Datenformat zur Übertragung von Sensordaten}
-}
-
-\newglossaryentry{BUFR}{%
-  name={BUFR},
-  description={Binäres Datenformat zur Übetragung meterologischer Daten}
-}
-
-
-\newglossaryentry{Framework}{%
-    name={Framework},
-    description={Erweiterbare Softwarebibliothek zur Erstellung von Systemen. Funktioniert nach dem Hollywood-Prinzip (don't call us, we call you)}
-}
-
-\newglossaryentry{Julian Day}{%
-    name={Julianischen Datum},
-    description={(julian day) In der Wissenschaft gebräuchliches Datumsformat über die Tageszählung ab einem fixen Startdatum (meist 1. Januar 4713 v. Chr.)}
-}
+\setacronymstyle{long-short}
+\makeglossaries
+\input{glossar}
