doc - zweites Lek

--- a/BA_argo_doc/bib.bib
+++ b/BA_argo_doc/bib.bib
@@ -283,3 +283,12 @@ month = {April},
 year = {2011},
 note = {(Aufgerufen am  06.03.2018)}
 }
+
+@misc{Organiza62:online,
+author = {},
+title = {Organizations - SQLAlchemy},
+howpublished = {\url{https://www.sqlalchemy.org/organizations.html}},
+month = {},
+year = {},
+note = {(Aufgerufen am  12.03.2018)}
+}
