--- a/BA_argo_doc/glossar.tex
+++ b/BA_argo_doc/glossar.tex
@@ -7,6 +7,7 @@
 \newacronym{netCDF}{netCDF}{Network Common Data Format}
 \newacronym{DBMS}{DBMS}{Datenbank-Management-System}
 \newacronym{ORM}{ORM}{Objektrelationaler Mapper}
+\newacronym{KISS}{KISS}{Keep it simple, stupid}
 
 
 \newglossaryentry{Controller}{%
@@ -57,4 +58,9 @@
 \newglossaryentry{nan}{%
     name={NaN},
     description={Not a Number. Ist ein numerischer Wert, der undefiniert ist, oder keinem Wert entspricht}
+}
+
+\newglossaryentry{WSGI}{%
+    name={WSGI},
+    description={Web Server Gateway Interface. Schnittstellenspezifikation zur Protikollstandardisierung der Kommonikation von Python-Programmen und Webservern}
 }
